# h2ops

./: .gitignore  CHANGES.md  README.md  cookiecutter.json  environment.yml  pyproject.toml
hooks/: post_gen_project.py
tests/: test_cookiecutter.py
{{ cookiecutter.folder_name }}/: .env  .gitignore  MLOps.md  README.md  docker-compose.yml  environment.yml  mlops-run.sh  pyproject.toml
{{ cookiecutter.folder_name }}/.github/workflows/: unittest.yml
{{ cookiecutter.folder_name }}/dags/: README.md  change_me_config.yml  change_me_dag.py  change_me_generate_dags.py  example_config.yml  example_dag.py
{{ cookiecutter.folder_name }}/data/: add_your_data_here
{{ cookiecutter.folder_name }}/dockerfiles/: README.md
{{ cookiecutter.folder_name }}/dockerfiles/airflow/: Dockerfile
{{ cookiecutter.folder_name }}/dockerfiles/mlflow/: Dockerfile
{{ cookiecutter.folder_name }}/notebooks/: README.md
{{ cookiecutter.folder_name }}/notebooks/examples/: mlflow_2_steps.ipynb  mlflow_direct_inference.ipynb  mlflow_docker_inference.ipynb  mlflow_inference.ipynb  mlflow_local_deploy_inference.ipynb  mlfow_introduction.ipynb
{{ cookiecutter.folder_name }}/scripts/: example_script
{{ cookiecutter.folder_name }}/tests/model/: test_model.py
{{ cookiecutter.folder_name }}/tests/model_pipeline/: test_model_pipeline.py
{{ cookiecutter.folder_name }}/tests/postprocess/: test_postprocess.py
{{ cookiecutter.folder_name }}/tests/preprocess/: test_preprocess.py
{{ cookiecutter.folder_name }}/tests/train/: test_train.py
{{ cookiecutter.folder_name }}/{{ cookiecutter.package_name }}/: README.md  __init__.py  change_me_model_pipeline.py  example_model_pipeline.py
{{ cookiecutter.folder_name }}/{{ cookiecutter.package_name }}/dataloader/: change_me_data.py  data.py  example_data.py  example_data_without_minio.py
{{ cookiecutter.folder_name }}/{{ cookiecutter.package_name }}/model_pipeline/: change_me_model_pipeline.py  example_model_pipeline.py
{{ cookiecutter.folder_name }}/{{ cookiecutter.package_name }}/models/: example_model.py
{{ cookiecutter.folder_name }}/{{ cookiecutter.package_name }}/pipeline/: model.py
{{ cookiecutter.folder_name }}/{{ cookiecutter.package_name }}/postprocess/: change_me_postprocess.py  example_postprocess.py
{{ cookiecutter.folder_name }}/{{ cookiecutter.package_name }}/preprocess/: change_me_preprocess.py  example_preprocess.py  example_preprocess_without_minio.py
{{ cookiecutter.folder_name }}/{{ cookiecutter.package_name }}/train/: change_me_train.py  example_train.py  example_train_without_minio.py
{{ cookiecutter.folder_name }}/{{ cookiecutter.package_name }}/utils/: utils.py
(+56 files in other folders)
